fix: query error